# electron-react-python-template

./: .gitignore  GEMINI.md  README.md  SUMMARY.md  build.sh  constants.js  constants.js.map  constants.ts  global.d.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.turbo/cache/: 0e04ab17b27c55ee-meta.json  e7813b292832e1f5-meta.json  e7813b292832e1f5.tar.zst
apps/backend/: GEMINI.md  database.py  main.py  package.json  pyproject.toml
apps/backend/src/: main.py
apps/backend/src/api/: routes_base.py
apps/backend/src/api/routes/: health.py
apps/backend/src/core/: config.py  cors.py
apps/backend/src/db/: session.py
apps/backend/src/schemas/: example_schema.py
apps/backend/src/services/: example_service.py
apps/backend/src/utils/: logger.py
apps/backend/tests/: test_basic.py
apps/electron/: .gitignore  .npmrc  GEMINI.md  electron.vite.config.ts  main.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json
apps/frontend/: GEMINI.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.js.timestamp-1762265573675-ca660eb00c914.mjs  vite.config.js.timestamp-1762337933074-fd04083df4385.mjs  vite.config.ts  vite.config.ts.timestamp-1761625865777-f40fc31986ded8.mjs
backend/: .gitignore  downloader.py  main.py  models.py
docs/: architecture.md  contributing.md  overview.md
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+110 files in other folders)
